--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section class="hero-image">
       <h1 class="heading"><div class="container">Максим Тимчук</div> </h1>
-      <div class="container"><p>Junior верстальщик</p></div>
+      <div class="container"><p>Junior программист</p></div>
     </section>
 
     <section class="intro">
